BD-716: Bumped dependencies, upgraded to java-spring6 module to Java 21, updated models and added new request headers.