@@ -87,7 +87,6 @@ import java.util.List;
 import java.util.Properties;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -162,7 +161,7 @@ class BlinkDebitClientTest {
                                             new BankmetadataFeaturesDecoupledFlowAvailableIdentifiers()
                                                     .type(IdentifierType.MOBILE_NUMBER)
                                                     .name("Mobile Number"))
-                                    .collect(Collectors.toList()))
+                                    .toList())
                             .requestTimeout("PT3M")))
             .redirectFlow(new BankmetadataRedirectFlow()
                     .enabled(true)
@@ -191,7 +190,7 @@ class BlinkDebitClientTest {
                                             new BankmetadataFeaturesDecoupledFlowAvailableIdentifiers()
                                                     .type(IdentifierType.MOBILE_NUMBER)
                                                     .name("Mobile Number"))
-                                    .collect(Collectors.toList()))
+                                    .toList())
                             .requestTimeout("PT3M")));
 
     @Test
@@ -277,14 +276,16 @@ class BlinkDebitClientTest {
                 .flow(new AuthFlow()
                         .detail(new RedirectFlow()
                                 .bank(Bank.PNZ)
-                                .redirectUri(REDIRECT_URI)))
+                                .redirectUri(REDIRECT_URI)
+                                .redirectToApp(true)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("1.25"))
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createSingleConsent(request);
 
@@ -307,14 +308,16 @@ class BlinkDebitClientTest {
                 .flow(new AuthFlow()
                         .detail(new RedirectFlow()
                                 .bank(Bank.PNZ)
-                                .redirectUri(REDIRECT_URI)))
+                                .redirectUri(REDIRECT_URI)
+                                .redirectToApp(true)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("1.25"))
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createSingleConsent(request, UUID.randomUUID().toString());
 
@@ -337,14 +340,16 @@ class BlinkDebitClientTest {
                 .flow(new AuthFlow()
                         .detail(new RedirectFlow()
                                 .bank(Bank.PNZ)
-                                .redirectUri(REDIRECT_URI)))
+                                .redirectUri(REDIRECT_URI)
+                                .redirectToApp(true)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("1.25"))
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createSingleConsentAsMono(request);
 
@@ -369,14 +374,16 @@ class BlinkDebitClientTest {
                 .flow(new AuthFlow()
                         .detail(new RedirectFlow()
                                 .bank(Bank.PNZ)
-                                .redirectUri(REDIRECT_URI)))
+                                .redirectUri(REDIRECT_URI)
+                                .redirectToApp(true)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("1.25"))
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createSingleConsentAsMono(request,
                 UUID.randomUUID().toString());
@@ -402,7 +409,7 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
@@ -410,7 +417,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createSingleConsent(request);
 
@@ -433,7 +441,7 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
@@ -441,7 +449,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createSingleConsent(request, UUID.randomUUID().toString());
 
@@ -464,7 +473,7 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
@@ -472,7 +481,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createSingleConsentAsMono(request);
 
@@ -497,7 +507,7 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
@@ -505,7 +515,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createSingleConsentAsMono(request,
                 UUID.randomUUID().toString());
@@ -538,7 +549,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createSingleConsent(request, UUID.randomUUID().toString());
 
@@ -568,7 +580,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createSingleConsent(request);
 
@@ -598,7 +611,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createSingleConsentAsMono(request);
 
@@ -630,7 +644,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createSingleConsentAsMono(request,
                 UUID.randomUUID().toString());
@@ -655,6 +670,7 @@ class BlinkDebitClientTest {
                                 .detail((OneOfauthFlowDetail) new RedirectFlow()
                                         .bank(Bank.PNZ)
                                         .redirectUri(REDIRECT_URI)
+                                        .redirectToApp(true)
                                         .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                         .pcr(new Pcr()
                                 .particulars("particulars")
@@ -663,6 +679,7 @@ class BlinkDebitClientTest {
                         .amount(new Amount()
                                 .currency(Amount.CurrencyEnum.NZD)
                                 .total("1.25"))
+                        .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                         .type(ConsentDetail.TypeEnum.SINGLE))
                 .payments(Collections.emptySet());
         when(singleConsentsApiClient.getSingleConsent(consentId))
@@ -712,6 +729,7 @@ class BlinkDebitClientTest {
                                 .detail((OneOfauthFlowDetail) new RedirectFlow()
                                         .bank(Bank.PNZ)
                                         .redirectUri(REDIRECT_URI)
+                                        .redirectToApp(true)
                                         .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                         .pcr(new Pcr()
                                 .particulars("particulars")
@@ -720,6 +738,7 @@ class BlinkDebitClientTest {
                         .amount(new Amount()
                                 .currency(Amount.CurrencyEnum.NZD)
                                 .total("1.25"))
+                        .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                         .type(ConsentDetail.TypeEnum.SINGLE))
                 .payments(Collections.emptySet());
         when(singleConsentsApiClient.getSingleConsent(consentId, requestId))
@@ -768,6 +787,7 @@ class BlinkDebitClientTest {
                                 .detail((OneOfauthFlowDetail) new RedirectFlow()
                                         .bank(Bank.PNZ)
                                         .redirectUri(REDIRECT_URI)
+                                        .redirectToApp(true)
                                         .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                         .pcr(new Pcr()
                                 .particulars("particulars")
@@ -776,6 +796,7 @@ class BlinkDebitClientTest {
                         .amount(new Amount()
                                 .currency(Amount.CurrencyEnum.NZD)
                                 .total("1.25"))
+                        .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                         .type(ConsentDetail.TypeEnum.SINGLE))
                 .payments(Collections.emptySet());
         when(singleConsentsApiClient.getSingleConsent(consentId))
@@ -826,6 +847,7 @@ class BlinkDebitClientTest {
                                 .detail((OneOfauthFlowDetail) new RedirectFlow()
                                         .bank(Bank.PNZ)
                                         .redirectUri(REDIRECT_URI)
+                                        .redirectToApp(true)
                                         .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                         .pcr(new Pcr()
                                 .particulars("particulars")
@@ -834,6 +856,7 @@ class BlinkDebitClientTest {
                         .amount(new Amount()
                                 .currency(Amount.CurrencyEnum.NZD)
                                 .total("1.25"))
+                        .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                         .type(ConsentDetail.TypeEnum.SINGLE))
                 .payments(Collections.emptySet());
         when(singleConsentsApiClient.getSingleConsent(consentId, requestId))
@@ -929,7 +952,8 @@ class BlinkDebitClientTest {
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createEnduringConsent(request);
 
@@ -960,7 +984,8 @@ class BlinkDebitClientTest {
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createEnduringConsent(request, UUID.randomUUID().toString());
 
@@ -990,7 +1015,8 @@ class BlinkDebitClientTest {
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createEnduringConsentAsMono(request);
 
@@ -1023,7 +1049,8 @@ class BlinkDebitClientTest {
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createEnduringConsentAsMono(request,
                 UUID.randomUUID().toString());
@@ -1049,14 +1076,15 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .maximumAmountPeriod(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createEnduringConsent(request);
 
@@ -1080,14 +1108,15 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .maximumAmountPeriod(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createEnduringConsent(request, UUID.randomUUID().toString());
 
@@ -1110,14 +1139,15 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .maximumAmountPeriod(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createEnduringConsentAsMono(request);
 
@@ -1143,14 +1173,15 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .maximumAmountPeriod(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createEnduringConsentAsMono(request,
                 UUID.randomUUID().toString());
@@ -1177,14 +1208,15 @@ class BlinkDebitClientTest {
                                 .redirectUri(REDIRECT_URI)
                                 .flowHint(new DecoupledFlowHint()
                                         .identifierType(IdentifierType.PHONE_NUMBER)
-                                        .identifierValue("+6449144425")
+                                        .identifierValue("+64-259531933")
                                         .bank(Bank.PNZ))))
                 .maximumAmountPeriod(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createEnduringConsent(request);
 
@@ -1208,14 +1240,15 @@ class BlinkDebitClientTest {
                                 .redirectUri(REDIRECT_URI)
                                 .flowHint(new DecoupledFlowHint()
                                         .identifierType(IdentifierType.PHONE_NUMBER)
-                                        .identifierValue("+6449144425")
+                                        .identifierValue("+64-259531933")
                                         .bank(Bank.PNZ))))
                 .maximumAmountPeriod(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateConsentResponse actual = client.createEnduringConsent(request, UUID.randomUUID().toString());
 
@@ -1239,14 +1272,15 @@ class BlinkDebitClientTest {
                                 .redirectUri(REDIRECT_URI)
                                 .flowHint(new DecoupledFlowHint()
                                         .identifierType(IdentifierType.PHONE_NUMBER)
-                                        .identifierValue("+6449144425")
+                                        .identifierValue("+64-259531933")
                                         .bank(Bank.PNZ))))
                 .maximumAmountPeriod(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createEnduringConsentAsMono(request);
 
@@ -1272,14 +1306,15 @@ class BlinkDebitClientTest {
                                 .redirectUri(REDIRECT_URI)
                                 .flowHint(new DecoupledFlowHint()
                                         .identifierType(IdentifierType.PHONE_NUMBER)
-                                        .identifierValue("+6449144425")
+                                        .identifierValue("+64-259531933")
                                         .bank(Bank.PNZ))))
                 .maximumAmountPeriod(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("50.00"))
                 .period(Period.MONTHLY)
                 .fromTimestamp(OffsetDateTime.now(ZONE_ID))
-                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11));
+                .expiryTimestamp(OffsetDateTime.now(ZONE_ID).plusMonths(11))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateConsentResponse> createConsentResponseMono = client.createEnduringConsentAsMono(request,
                 UUID.randomUUID().toString());
@@ -1305,12 +1340,14 @@ class BlinkDebitClientTest {
                                 .detail((OneOfauthFlowDetail) new RedirectFlow()
                                         .bank(Bank.PNZ)
                                         .redirectUri(REDIRECT_URI)
+                                        .redirectToApp(true)
                                         .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                         .period(Period.MONTHLY)
                         .fromTimestamp(now)
                         .maximumAmountPeriod(new Amount()
                                 .currency(Amount.CurrencyEnum.NZD)
                                 .total("50.00"))
+                        .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                         .type(ConsentDetail.TypeEnum.ENDURING))
                 .payments(Collections.emptySet());
         when(enduringConsentsApiClient.getEnduringConsent(consentId))
@@ -1359,12 +1396,14 @@ class BlinkDebitClientTest {
                                 .detail((OneOfauthFlowDetail) new RedirectFlow()
                                         .bank(Bank.PNZ)
                                         .redirectUri(REDIRECT_URI)
+                                        .redirectToApp(true)
                                         .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                         .period(Period.MONTHLY)
                         .fromTimestamp(now)
                         .maximumAmountPeriod(new Amount()
                                 .currency(Amount.CurrencyEnum.NZD)
                                 .total("50.00"))
+                        .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                         .type(ConsentDetail.TypeEnum.ENDURING))
                 .payments(Collections.emptySet());
         when(enduringConsentsApiClient.getEnduringConsent(consentId, requestId))
@@ -1412,12 +1451,14 @@ class BlinkDebitClientTest {
                                 .detail((OneOfauthFlowDetail) new RedirectFlow()
                                         .bank(Bank.PNZ)
                                         .redirectUri(REDIRECT_URI)
+                                        .redirectToApp(true)
                                         .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                         .period(Period.MONTHLY)
                         .fromTimestamp(now)
                         .maximumAmountPeriod(new Amount()
                                 .currency(Amount.CurrencyEnum.NZD)
                                 .total("50.00"))
+                        .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                         .type(ConsentDetail.TypeEnum.ENDURING))
                 .payments(Collections.emptySet());
         when(enduringConsentsApiClient.getEnduringConsent(consentId))
@@ -1467,12 +1508,14 @@ class BlinkDebitClientTest {
                                 .detail((OneOfauthFlowDetail) new RedirectFlow()
                                         .bank(Bank.PNZ)
                                         .redirectUri(REDIRECT_URI)
+                                        .redirectToApp(true)
                                         .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                         .period(Period.MONTHLY)
                         .fromTimestamp(now)
                         .maximumAmountPeriod(new Amount()
                                 .currency(Amount.CurrencyEnum.NZD)
                                 .total("50.00"))
+                        .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                         .type(ConsentDetail.TypeEnum.ENDURING))
                 .payments(Collections.emptySet());
         when(enduringConsentsApiClient.getEnduringConsent(consentId, requestId))
@@ -1559,14 +1602,16 @@ class BlinkDebitClientTest {
                 .flow(new AuthFlow()
                         .detail(new RedirectFlow()
                                 .bank(Bank.PNZ)
-                                .redirectUri(REDIRECT_URI)))
+                                .redirectUri(REDIRECT_URI)
+                                .redirectToApp(true)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("1.25"))
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateQuickPaymentResponse actual = client.createQuickPayment(request);
 
@@ -1589,14 +1634,16 @@ class BlinkDebitClientTest {
                 .flow(new AuthFlow()
                         .detail(new RedirectFlow()
                                 .bank(Bank.PNZ)
-                                .redirectUri(REDIRECT_URI)))
+                                .redirectUri(REDIRECT_URI)
+                                .redirectToApp(true)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("1.25"))
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateQuickPaymentResponse actual = client.createQuickPayment(request,
                 UUID.randomUUID().toString());
@@ -1620,14 +1667,16 @@ class BlinkDebitClientTest {
                 .flow(new AuthFlow()
                         .detail(new RedirectFlow()
                                 .bank(Bank.PNZ)
-                                .redirectUri(REDIRECT_URI)))
+                                .redirectUri(REDIRECT_URI)
+                                .redirectToApp(true)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("1.25"))
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateQuickPaymentResponse> createQuickPaymentResponseMono =
                 client.createQuickPaymentAsMono(request);
@@ -1653,14 +1702,16 @@ class BlinkDebitClientTest {
                 .flow(new AuthFlow()
                         .detail(new RedirectFlow()
                                 .bank(Bank.PNZ)
-                                .redirectUri(REDIRECT_URI)))
+                                .redirectUri(REDIRECT_URI)
+                                .redirectToApp(true)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
                         .total("1.25"))
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateQuickPaymentResponse> createQuickPaymentResponseMono =
                 client.createQuickPaymentAsMono(request, UUID.randomUUID().toString());
@@ -1686,7 +1737,7 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
@@ -1694,7 +1745,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateQuickPaymentResponse actual = client.createQuickPayment(request);
 
@@ -1717,7 +1769,7 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
@@ -1725,7 +1777,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateQuickPaymentResponse actual = client.createQuickPayment(request,
                 UUID.randomUUID().toString());
@@ -1749,7 +1802,7 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
@@ -1757,7 +1810,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateQuickPaymentResponse> createQuickPaymentResponseMono =
                 client.createQuickPaymentAsMono(request);
@@ -1783,7 +1837,7 @@ class BlinkDebitClientTest {
                         .detail(new DecoupledFlow()
                                 .bank(Bank.PNZ)
                                 .identifierType(IdentifierType.PHONE_NUMBER)
-                                .identifierValue("+6449144425")
+                                .identifierValue("+64-259531933")
                                 .callbackUrl(CALLBACK_URL)))
                 .amount(new Amount()
                         .currency(Amount.CurrencyEnum.NZD)
@@ -1791,7 +1845,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateQuickPaymentResponse> createQuickPaymentResponseMono =
                 client.createQuickPaymentAsMono(request, UUID.randomUUID().toString());
@@ -1825,7 +1880,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateQuickPaymentResponse actual = client.createQuickPayment(request);
 
@@ -1856,7 +1912,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         CreateQuickPaymentResponse actual = client.createQuickPayment(request,
                 UUID.randomUUID().toString());
@@ -1888,7 +1945,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateQuickPaymentResponse> createQuickPaymentResponseMono =
                 client.createQuickPaymentAsMono(request);
@@ -1922,7 +1980,8 @@ class BlinkDebitClientTest {
                 .pcr(new Pcr()
                         .particulars("particulars")
                         .code("code")
-                        .reference("reference"));
+                        .reference("reference"))
+                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e");
 
         Mono<CreateQuickPaymentResponse> createQuickPaymentResponseMono =
                 client.createQuickPaymentAsMono(request, UUID.randomUUID().toString());
@@ -1952,6 +2011,7 @@ class BlinkDebitClientTest {
                                         .detail((OneOfauthFlowDetail) new RedirectFlow()
                                                 .bank(Bank.PNZ)
                                                 .redirectUri(REDIRECT_URI)
+                                                .redirectToApp(true)
                                                 .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                                 .pcr(new Pcr()
                                         .particulars("particulars")
@@ -1960,6 +2020,7 @@ class BlinkDebitClientTest {
                                 .amount(new Amount()
                                         .currency(Amount.CurrencyEnum.NZD)
                                         .total("1.25"))
+                                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                                 .type(ConsentDetail.TypeEnum.SINGLE))
                         .payments(Collections.emptySet()));
         when(quickPaymentsApiClient.getQuickPayment(quickPaymentId))
@@ -2019,6 +2080,7 @@ class BlinkDebitClientTest {
                                         .detail((OneOfauthFlowDetail) new RedirectFlow()
                                                 .bank(Bank.PNZ)
                                                 .redirectUri(REDIRECT_URI)
+                                                .redirectToApp(true)
                                                 .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                                 .pcr(new Pcr()
                                         .particulars("particulars")
@@ -2027,6 +2089,7 @@ class BlinkDebitClientTest {
                                 .amount(new Amount()
                                         .currency(Amount.CurrencyEnum.NZD)
                                         .total("1.25"))
+                                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                                 .type(ConsentDetail.TypeEnum.SINGLE))
                         .payments(Collections.emptySet()));
         when(quickPaymentsApiClient.getQuickPayment(quickPaymentId, requestId))
@@ -2085,6 +2148,7 @@ class BlinkDebitClientTest {
                                         .detail((OneOfauthFlowDetail) new RedirectFlow()
                                                 .bank(Bank.PNZ)
                                                 .redirectUri(REDIRECT_URI)
+                                                .redirectToApp(true)
                                                 .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                                 .pcr(new Pcr()
                                         .particulars("particulars")
@@ -2093,6 +2157,7 @@ class BlinkDebitClientTest {
                                 .amount(new Amount()
                                         .currency(Amount.CurrencyEnum.NZD)
                                         .total("1.25"))
+                                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                                 .type(ConsentDetail.TypeEnum.SINGLE))
                         .payments(Collections.emptySet()));
         when(quickPaymentsApiClient.getQuickPayment(quickPaymentId))
@@ -2154,6 +2219,7 @@ class BlinkDebitClientTest {
                                         .detail((OneOfauthFlowDetail) new RedirectFlow()
                                                 .bank(Bank.PNZ)
                                                 .redirectUri(REDIRECT_URI)
+                                                .redirectToApp(true)
                                                 .type(AuthFlowDetail.TypeEnum.REDIRECT)))
                                 .pcr(new Pcr()
                                         .particulars("particulars")
@@ -2162,6 +2228,7 @@ class BlinkDebitClientTest {
                                 .amount(new Amount()
                                         .currency(Amount.CurrencyEnum.NZD)
                                         .total("1.25"))
+                                .hashedCustomerIdentifier("88df3798e32512ac340164f7ed133343d6dcb4888e4a91b03512dedd9800d12e")
                                 .type(ConsentDetail.TypeEnum.SINGLE))
                         .payments(Collections.emptySet()));
         when(quickPaymentsApiClient.getQuickPayment(quickPaymentId, requestId))
@@ -2427,91 +2494,6 @@ class BlinkDebitClientTest {
                                 .reference("reference")));
 
         Mono<PaymentResponse> paymentResponseMono = client.createPaymentAsMono(request,
-                UUID.randomUUID().toString());
-
-        assertThat(paymentResponseMono).isNotNull();
-        PaymentResponse actual = paymentResponseMono.block();
-        assertThat(actual)
-                .isNotNull()
-                .extracting(PaymentResponse::getPaymentId)
-                .isEqualTo(paymentId);
-    }
-
-    @Test
-    void createWestpacPayment() throws BlinkServiceException {
-        UUID paymentId = UUID.randomUUID();
-        PaymentResponse response = new PaymentResponse()
-                .paymentId(paymentId);
-        when(paymentsApiClient.createWestpacPayment(any(PaymentRequest.class)))
-                .thenReturn(Mono.just(response));
-
-        PaymentRequest request = new PaymentRequest()
-                .consentId(UUID.randomUUID())
-                .accountReferenceId(UUID.randomUUID());
-
-        PaymentResponse actual = client.createWestpacPayment(request);
-
-        assertThat(actual)
-                .isNotNull()
-                .extracting(PaymentResponse::getPaymentId)
-                .isEqualTo(paymentId);
-    }
-
-    @Test
-    void createWestpacPaymentWithRequestId() throws BlinkServiceException {
-        UUID paymentId = UUID.randomUUID();
-        PaymentResponse response = new PaymentResponse()
-                .paymentId(paymentId);
-        when(paymentsApiClient.createWestpacPayment(any(PaymentRequest.class), anyString()))
-                .thenReturn(Mono.just(response));
-
-        PaymentRequest request = new PaymentRequest()
-                .consentId(UUID.randomUUID())
-                .accountReferenceId(UUID.randomUUID());
-
-        PaymentResponse actual = client.createWestpacPayment(request, UUID.randomUUID().toString());
-
-        assertThat(actual)
-                .isNotNull()
-                .extracting(PaymentResponse::getPaymentId)
-                .isEqualTo(paymentId);
-    }
-
-    @Test
-    void createWestpacPaymentAsMono() throws BlinkServiceException {
-        UUID paymentId = UUID.randomUUID();
-        PaymentResponse response = new PaymentResponse()
-                .paymentId(paymentId);
-        when(paymentsApiClient.createWestpacPayment(any(PaymentRequest.class)))
-                .thenReturn(Mono.just(response));
-
-        PaymentRequest request = new PaymentRequest()
-                .consentId(UUID.randomUUID())
-                .accountReferenceId(UUID.randomUUID());
-
-        Mono<PaymentResponse> paymentResponseMono = client.createWestpacPaymentAsMono(request);
-
-        assertThat(paymentResponseMono).isNotNull();
-        PaymentResponse actual = paymentResponseMono.block();
-        assertThat(actual)
-                .isNotNull()
-                .extracting(PaymentResponse::getPaymentId)
-                .isEqualTo(paymentId);
-    }
-
-    @Test
-    void createWestpacPaymentAsMonoWithRequestId() throws BlinkServiceException {
-        UUID paymentId = UUID.randomUUID();
-        PaymentResponse response = new PaymentResponse()
-                .paymentId(paymentId);
-        when(paymentsApiClient.createWestpacPayment(any(PaymentRequest.class), anyString()))
-                .thenReturn(Mono.just(response));
-
-        PaymentRequest request = new PaymentRequest()
-                .consentId(UUID.randomUUID())
-                .accountReferenceId(UUID.randomUUID());
-
-        Mono<PaymentResponse> paymentResponseMono = client.createWestpacPaymentAsMono(request,
                 UUID.randomUUID().toString());
 
         assertThat(paymentResponseMono).isNotNull();
